--- a/Proyecto_Final_Avances_Equipo_46.ipynb
+++ b/Proyecto_Final_Avances_Equipo_46.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+obqH+hVvBmlz9m+aQ1tq",
+      "authorship_tag": "ABX9TyPBlgoe5ZOWQSbHLxwHn+4h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,6 +118,34 @@
       ],
       "metadata": {
         "id": "6qvvzH0Hjc8F"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Pregustas de investigación:\n",
+        "#### 1.\t¿Cuál es la edad con mayor consumo de alcohol?\n",
+        "#### 2.\t¿Cuáles son los factores que inducen al estudiante al consumo del alcohol?\n",
+        "#### 3.\t¿Cuánto afecta el rendimiento del estudiante para obtener buenas notas?\n",
+        "#### 4.\t¿Cuál es el estado de salud de los alumnos?\n",
+        "#### 5.\t¿Cuál es su entorno familiar de los alumnos que consumen alcohol?\n",
+        "#### 6.\t¿Qué sexo que consumen más alcohol?\n",
+        "#### 7.\t¿Podemos predecir si el alumno aprobara o no las materias?\n",
+        "#### 8.\t¿Podemos crear programas a la medida para atender a los alumnos con problemas de alcoholismo?\n"
+      ],
+      "metadata": {
+        "id": "AnhHZ2aPn3sH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Sector al que estaria interesado en la investigación:\n",
+        "#### Escuelas del sector público y privado\n",
+        "#### Organizaciones y centros de ayuda para las personas con problemas de alcoholismo"
+      ],
+      "metadata": {
+        "id": "8mMLjrQjoGmV"
       }
     },
     {
