--- a/Semana3_Actividad1_Parte2.ipynb
+++ b/Semana3_Actividad1_Parte2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCnI7ruBSUecVqkljSkS5W",
+      "authorship_tag": "ABX9TyM02afmloe0DJ81bLoW/NMX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3455,10 +3455,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### podriamos remplazar los valores nulos con la media o mediana y considerarlos, pero desconozco el proceso y considero no seria una diferencia razonable para considerarlos"
+      ],
+      "metadata": {
+        "id": "gXqLCr0mDKV5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "5v_-GjBP_x1_"
+        "id": "1GGvPqh1Ctwr"
       },
       "execution_count": null,
       "outputs": []
