--- a/Semana3_Actividad1_Parte2.ipynb
+++ b/Semana3_Actividad1_Parte2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM02afmloe0DJ81bLoW/NMX",
+      "authorship_tag": "ABX9TyNuJ5IQ1/PpxfgsFn6jO4d4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3049,7 +3049,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "### no se pretende eliminar columnas por que los en la mayoria de ellos existen valores nulos que practicamente nos quedariamos sin datos para trabajar"
+        "### no es opcion eliminar columnas por que los en la mayoria de ellos existen valores nulos que practicamente nos quedariamos sin datos para trabajar"
       ],
       "metadata": {
         "id": "AzTEJE3787D_"
@@ -3457,7 +3457,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### podriamos remplazar los valores nulos con la media o mediana y considerarlos, pero desconozco el proceso y considero no seria una diferencia razonable para considerarlos"
+        "### podriamos remplazar los valores nulos con la media o mediana y considerarlos, pero desconozco el proceso y considero no seria una diferencia razonable para considerarlos por consiguientes lo mejor seria descartar los 42 registros nulos"
       ],
       "metadata": {
         "id": "gXqLCr0mDKV5"
