--- a/Semana3_Actividad1_Parte2.ipynb
+++ b/Semana3_Actividad1_Parte2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFYz7NeKxLGeFwtPGiKHzJ",
+      "authorship_tag": "ABX9TyOkx8D0Zu3LJprdo9LTchWt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,8 +43,49 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Información de los datos:\n",
+        "\n",
+        "##### Esta investigación apuntó al caso de los pagos predeterminados de los clientes en Taiwán y compara la precisión predictiva de la probabilidad de incumplimiento entre seis métodos de minería de datos. Desde la perspectiva de la gestión de riesgos, el resultado de la precisión predictiva de la probabilidad de incumplimiento estimada será más valioso que el resultado binario de la clasificación: clientes creíbles o no creíbles."
+      ],
+      "metadata": {
+        "id": "RlbAKcZCHxHO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Información de atributos:\n",
+        "\n",
+        "##### Esta investigación empleó una variable binaria, pago por defecto (Sí = 1, No = 0), como variable de respuesta. Este estudio revisó la literatura y utilizó las siguientes 23 variables como variables explicativas:\n",
+        "\n",
+        "##### X1: Monto del crédito otorgado (dólar NT): incluye tanto el crédito de consumo individual como su crédito familiar (complementario).\n",
+        "##### X2: Género (1 = masculino; 2 = femenino).\n",
+        "##### X3: Educación (1 = posgrado; 2 = universidad; 3 = secundaria; 4 = otros).\n",
+        "##### X4: Estado civil (1 = casado; 2 = soltero; 3 = otros).\n",
+        "##### X5: Edad (año).\n",
+        "##### X6 - X11: Historial de pagos pasados. Hicimos un seguimiento de los registros de pagos mensuales pasados ​​(de abril a septiembre de 2005) de la siguiente manera:\n",
+        "##### X6 = el estado de pago en septiembre de 2005;\n",
+        "##### X7 = el estado de pago en agosto de 2005; . . .;\n",
+        "##### X11 = estado de amortización en abril de 2005.\n",
+        "##### La escala de medición del estado de amortización es: -1 = pagar debidamente; 1 = retraso en el pago de un mes; 2 = retraso en el pago de dos meses; . . .; 8 = retraso en el pago de ocho meses; 9 = retraso en el pago de nueve meses o más.\n",
+        "##### X12-X17: Importe del estado de cuenta (dólar NT).\n",
+        "##### X12 = monto del estado de cuenta en septiembre de 2005;\n",
+        "##### X13 = monto del estado de cuenta en agosto de 2005; . . .;\n",
+        "##### X17 = monto del estado de cuenta en abril de 2005.\n",
+        "##### X18-X23: Monto del pago anterior (dólar NT).\n",
+        "##### X18 = monto pagado en septiembre de 2005;\n",
+        "##### X19 = monto pagado en agosto de 2005; . . .;\n",
+        "##### X23 = monto pagado en abril de 2005.\n"
+      ],
+      "metadata": {
+        "id": "KN0iPkivIda6"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "_yk1dXsLx0P-"
       },
@@ -76,7 +117,7 @@
         "id": "a7I9fTe0yv2k",
         "outputId": "1279f3c0-19e5-4cd7-b443-703bc4fc2673"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,7 +415,7 @@
         "id": "IG0zY_Muz0aF",
         "outputId": "6845e5d3-8fe4-44b6-ff2a-a45c2cd603dd"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -832,7 +873,7 @@
         "id": "7L6RdbUz1VDG",
         "outputId": "c6dcd4f9-ce04-45cb-e320-a7e3284ed8f2"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -860,7 +901,7 @@
         "id": "NEQUORpV12Nx",
         "outputId": "ef022f12-3671-429e-8b8c-cb0f8d8a0f61"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -923,7 +964,7 @@
         "id": "Dl2nC4H_3E8w",
         "outputId": "751a1ee4-82d8-4625-ebab-1ad9adcd6379"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1383,7 +1424,7 @@
         "id": "wBlNZI-M2Bqy",
         "outputId": "f774836c-c2dc-4629-f8b7-3ef6d6845edf"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1837,7 +1878,7 @@
       "metadata": {
         "id": "u2tiPVUC4wm-"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1854,7 +1895,7 @@
         "id": "DeWq1wH-5BLJ",
         "outputId": "b6c8acc3-26ec-412c-a000-dbeb64167791"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1882,7 +1923,7 @@
         "id": "Kt1M8jqP7FuG",
         "outputId": "9ac3fead-53c7-409d-a0a8-4fca242ddf57"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1936,7 +1977,7 @@
         "id": "K-HBHODT5B5B",
         "outputId": "ed0faf05-f10d-4740-d870-0c677170aec2"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2405,7 +2446,7 @@
         "id": "zSFAfO1w5DJh",
         "outputId": "bec15ea7-0a36-4335-9b22-36b25792172c"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2865,7 +2906,7 @@
         "id": "rIRXNcqE7p2T",
         "outputId": "bed7cafe-6d7f-4722-8c7d-f8ad27035311"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3081,7 +3122,7 @@
         "id": "IfWLUOlT8GrT",
         "outputId": "b64e6d27-0f4e-489f-c838-28422ce1a229"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
