--- a/Actividad_Semana_4.ipynb
+++ b/Actividad_Semana_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdXopA2H9WGpGQPsCDYAWH",
+      "authorship_tag": "ABX9TyPxmbnfpRUCnRb1v+xsoHFV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -444,9 +444,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G0WL2tveiMEH",
-        "outputId": "a5ae9249-7e89-4800-b641-303557531a27"
+        "outputId": "5f5532e4-008e-4f9a-f29e-a4e4c44a20d6"
       },
-      "execution_count": 72,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -459,7 +459,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 72
+          "execution_count": 98
         }
       ]
     },
@@ -477,7 +477,7 @@
       "metadata": {
         "id": "EcD_G8H5vERV"
       },
-      "execution_count": 73,
+      "execution_count": 99,
       "outputs": []
     },
     {
@@ -493,9 +493,9 @@
           "height": 206
         },
         "id": "DmJKQGrsvQpu",
-        "outputId": "7921e527-c5dc-42c9-b98f-82a06cb0cf76"
+        "outputId": "a93ed7b6-a397-43ae-910c-088bb8e8833c"
       },
-      "execution_count": 74,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -517,7 +517,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8ae5886c-2e59-46fe-821d-b5f02ad45784\">\n",
+              "  <div id=\"df-d4069a48-1e94-4c11-8ff6-107e24ee2472\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -636,7 +636,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8ae5886c-2e59-46fe-821d-b5f02ad45784')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d4069a48-1e94-4c11-8ff6-107e24ee2472')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -687,12 +687,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8ae5886c-2e59-46fe-821d-b5f02ad45784 button.colab-df-convert');\n",
+              "          document.querySelector('#df-d4069a48-1e94-4c11-8ff6-107e24ee2472 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8ae5886c-2e59-46fe-821d-b5f02ad45784');\n",
+              "          const element = document.querySelector('#df-d4069a48-1e94-4c11-8ff6-107e24ee2472');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -715,9 +715,23 @@
             ]
           },
           "metadata": {},
-          "execution_count": 74
+          "execution_count": 100
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ndf=(\n",
+        "    (ndf-ndf.min())/\n",
+        "    (ndf.max()-ndf.min()) \n",
+        ")"
+      ],
+      "metadata": {
+        "id": "OBvRbtDL6Fb1"
+      },
+      "execution_count": 110,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -732,9 +746,9 @@
           "height": 457
         },
         "id": "dnpNojQYdN_M",
-        "outputId": "d9372861-079a-459f-af01-f2b5e79ed7cb"
+        "outputId": "a767c250-0083-4f30-d56a-edb5d1e3ed86"
       },
-      "execution_count": 75,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -772,7 +786,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4e1322de-02f4-4697-bfab-f02b5fdab485\">\n",
+              "  <div id=\"df-a9a4adc0-db1b-4b53-9241-1ddb4b3fc17f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1019,7 +1033,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4e1322de-02f4-4697-bfab-f02b5fdab485')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a9a4adc0-db1b-4b53-9241-1ddb4b3fc17f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1070,12 +1084,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4e1322de-02f4-4697-bfab-f02b5fdab485 button.colab-df-convert');\n",
+              "          document.querySelector('#df-a9a4adc0-db1b-4b53-9241-1ddb4b3fc17f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4e1322de-02f4-4697-bfab-f02b5fdab485');\n",
+              "          const element = document.querySelector('#df-a9a4adc0-db1b-4b53-9241-1ddb4b3fc17f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1098,7 +1112,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 75
+          "execution_count": 111
         }
       ]
     },
@@ -1118,9 +1132,9 @@
           "height": 489
         },
         "id": "bf-jD3cggiIr",
-        "outputId": "f311217e-3690-49f9-b84d-151db39a2a69"
+        "outputId": "38a3ee07-dfd9-4401-b381-4f5273c23abe"
       },
-      "execution_count": 76,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1135,10 +1149,99 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "X13 y X12 tienen una correlacion muy alta al igual que X16 y X17"
+      ],
+      "metadata": {
+        "id": "lFKfssRZ39Rx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ndf.X1.mean().round(2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AFbAkRzFxpfw",
+        "outputId": "3db6a24c-e2f6-4246-f40e-e75be270f28a"
+      },
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.16"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 113
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Varience = np.cov([ndf.X1, ndf.X12])\n",
+        "Varience"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s648qqOs4Us4",
+        "outputId": "10c6ca45-02d7-4c3f-d8b7-e71125405f94"
+      },
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.01717626,        nan],\n",
+              "       [       nan,        nan]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 117
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ndf.var().sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L2wTaKPQ5SDT",
+        "outputId": "fefecd71-8a45-4e0f-8bb0-32ef07937c9d"
+      },
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "45432388919.16551"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 107
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "AFbAkRzFxpfw"
+        "id": "gJXFbp-679-X"
       },
       "execution_count": null,
       "outputs": []
