--- a/Actividad_Semana_4.ipynb
+++ b/Actividad_Semana_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO2M/ZLORhz7y9zUXNks5N5",
+      "authorship_tag": "ABX9TyPdartDXxETiBqMLgy5hN9L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1960,15 +1960,15 @@
       "source": [
         "# ¿Cuál es el número de componentes mínimo y por qué?\n",
         "\n",
-        "Considerando las variables que tome en cuenta para el trabajo y en base a tomar en cuenta el acumulado de la variaza en un 90% son siete componentes que representan el 91.14%\n",
+        "Considerando las variables que tome en cuenta para el trabajo y en base a tomar en cuenta el acumulado de la varianza en un 90% son siete componentes que representan el 91.14%\n",
         "\n",
         "#¿Cuál es la variación de los datos que representan esos componentes?\n",
         "\n",
-        "Del primer componente que representa el 45.49% al segundo componente hay una diferencia del 13.17%, despues hay un 7.25% de diferncia hacia el tercer componente alcanzando en estos tres primeros el 65.91%, despues le sigue las diferencias del 6.8%, 6.72%, 6.01% y 5.7% hasta alcanzar el 91.14% en el septimo componente.\n",
+        "Del primer componente que representa el 45.49% al segundo componente hay una diferencia del 13.17%, después hay un 7.25% de diferencia hacia el tercer componente alcanzando en estos tres primeros el 65.91%, después le sigue las diferencias del 6.8%, 6.72%, 6.01% y 5.7% hasta alcanzar el 91.14% en el séptimo componente.\n",
         "\n",
         "# ¿Cuál es la pérdida de información después de realizar PCA?\n",
         "\n",
-        "Se estaria perdiendo el 8.86% de los datos.\n",
+        "Se estaría perdiendo el 8.86% de los datos.\n",
         "\n",
         "# De las variables originales, ¿Cuál tiene mayor y cuál tiene menor importancia en los componentes principales?\n",
         "\n",
@@ -1982,7 +1982,7 @@
         "\n",
         "# ¿Cuándo se recomienda realizar un PCA y qué beneficios ofrece para Machine Learning?\n",
         "\n",
-        "Considero que es muy importente realizar PCA cuando se tiene mucha informacion como fue este caso, se requiere de mucha practica para encontrar las variables que le den un buen resultado en el modelo que se decida utilizar y creo que es de los primeros pasos a realizar en el proceso de analisis de datos.\n"
+        "Considero que es muy importante realizar PCA cuando se tiene mucha información como fue este caso, se requiere de mucha practica para encontrar las variables que le den un buen resultado en el modelo que se decida utilizar y creo que es de los primeros pasos a realizar en el proceso de análisis de datos.\n"
       ],
       "metadata": {
         "id": "nDtO1sL-TBOq"
